# claude-token-monitor

./: .gitignore  Makefile  README.md  mise.toml  pyproject.toml
.github/workflows/: tests.yml
daemon/: labeler.py  main.py  parser.py  rollup.py  routes.py  topics.py  watcher.py
tests/: conftest.py  test_labeler.py  test_parser.py  test_rollup.py  test_routes.py  test_sidecar.py  test_topics.py
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: GroupByToggle.test.tsx  GroupByToggle.tsx  LiveChart.tsx  QuotaBar.test.tsx  QuotaBar.tsx  RangeSwitcher.tsx  Sparkline.test.tsx  Sparkline.tsx  TimezoneToggle.tsx  UsageList.test.tsx  UsageList.tsx
ui/src/hooks/: useUsage.test.ts  useUsage.ts  useUsageStream.test.ts  useUsageStream.ts
