[project]
name = "claude-token-monitor"
version = "0.1.0"
description = "Local daemon + web UI for monitoring Claude Code token usage in real time."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "watchdog>=5.0",
    "pydantic>=2.9",
]

[tool.uv]
package = false
