[project]
name = "claude-token-monitor"
version = "0.1.0"
description = "Local daemon + web UI for monitoring Claude Code token usage in real time."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "watchdog>=5.0",
    "pydantic>=2.9",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
